Fix line breaks in code snippets

--- a/Trestle/Theme/Pahgawks/Pahgawks.css
+++ b/Trestle/Theme/Pahgawks/Pahgawks.css
@@ -590,6 +590,7 @@ span.code {
     font-size:0.85em;
     padding:0.2em;
     vertical-align:bottom;
+    word-wrap: break-word;
 }
 
 /* Responsive */
